 * Don't output colorized text during dependency check when output isn't a TTY, unless forced. Closes GH-1902.
 * [Nginx] The preferred Nginx version is now 1.10.3 (previously 1.10.2).
 * Adds Ubuntu 17.04 "Zesty" packages.


Release 5.1.2
-------------

 * Improve curl check for passenger-install- scripts to catch (very old) curl versions that won't compile against 5.1+.
 * Fixes remaining false positives (logging) from the new Meteor cluster warning system. Closes GH-1905.
 * Create a private keychain on macOS when the system keychain is defaulted to, this avoids a permissions issue with the system keychain when performing the Security Update Check. This is necessary because the system keychain is the default keychain of daemon users and root on macOS.
 * Improve `passenger-memory-stats` to include JRuby processes that fail to rename as expected. Closes GH-1878.
 * [Standalone] Don't download or compile Nginx when using the builtin engine. Closes GH-1910.
 * [Standalone] Fixes `--nginx-tarball` option of `passenger start` and `passenger-config install-standalone-runtime` (wasn't working). Also verifies that `--nginx-version` is explicitly specified as it should be.


Release 5.1.1
-------------

 * The precompiled version of the PassengerAgent binary (used for e.g. gem installs) now configures (statically linked) libcurl with system keystore, so that the new security update check can successfully validate certs.
 * Fixes some false positives (logging) from the new Node and Meteor cluster warning system. Logging is less repetitive and has extra debug info. Closes GH-1905.
 * Updates the upload-progress module in the Nginx Debian package. The module version that we linked against in 5.1.0 was 0.9.2, but due to a bug in that version the module didn't work.
 * The security update check now reports whether libcurl + SSL backend are statically linked to Passenger, in which case the check also needs to warn about relevant OpenSSL vulnerabilities in the linked library.