@@ -28,6 +28,7 @@
 
 #include <Core/SpawningKit/Spawner.h>
 #include <Constants.h>
+#include <Logging.h>
 #include <LveLoggingDecorator.h>
 #include <limits.h>  // for PTHREAD_STACK_MIN
 #include <pthread.h>
@@ -126,7 +127,11 @@ private:
 		if (shouldLoadShellEnvvars(options, preparation)) {
 			command.push_back(preparation.userSwitching.shell);
 			command.push_back(preparation.userSwitching.shell);
-			command.push_back("-lc");
+			if (Passenger::getLogLevel() >= LVL_DEBUG3) {
+				command.push_back("-lxc");
+			} else {
+				command.push_back("-lc");
+			}
 			command.push_back("exec \"$@\"");
 			command.push_back("SpawnPreparerShell");
 		} else {
